syntax = "proto3";

package adminserver.api.v1;

option go_package = "server/admin-server/api/v1;v1";



import "google/api/annotations.proto";

service Auth {
    rpc GetToken (GetTokenRequest) returns (GetTokenReply) {
      option (google.api.http) = {
        post: "/v1/authmanage/token"
        body: "*"
      };
    };
}

message GetTokenRequest {
  string username = 1;
  string password = 2;
}

message GetTokenReply {
  string token = 1;
  int64 expiration = 2;
}